# Project-Recovery-Facebook-Model

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: FACEBOOK_READER_V1.md  GOVERNING_RULES.md  PUBLIC_RELEASE_CHECKLIST.md  REPOSITORY_STRUCTURE.md
examples/facebook_html_sample/your_facebook_activity/messages/inbox/thread_0002/: message_1.html
examples/facebook_sample/your_facebook_activity/comments_and_reactions/: comments.json
examples/facebook_sample/your_facebook_activity/messages/inbox/thread_0001/: message_1.json
examples/facebook_sample/your_facebook_activity/posts/: your_posts__check_ins__photos_and_videos_1.json
recovery_engine/: __init__.py  cli.py
recovery_engine/intake/: __init__.py  container.py
recovery_engine/normalize/: facebook.py
recovery_engine/objects/: __init__.py  schema.py
recovery_engine/readers/: __init__.py
recovery_engine/readers/facebook/: __init__.py  html_parser.py  reader.py
recovery_engine/reports/: __init__.py  canonical.py  markdown.py  workbook.py
recovery_engine/utils/: hashing.py  jsonl.py  xlsx.py
recovery_engine/validation/: privacy.py  validator.py
scripts/: run_facebook_reader.py  verify_public_repo.py
tests/: test_facebook_reader.py
